--- a/server/http_files/public/css/style.css
+++ b/server/http_files/public/css/style.css
@@ -8,13 +8,22 @@ html, body {
     font-family: "Open Sans", sans-serif;
 }
 
+body.bodyLock {
+    overflow: hidden !important;
+    height: 100% !important;
+    width: 100% !important;
+}
+
 .main_div {
     margin: 50px auto 0;
     width: 80%;
 }
 
 .f_l {float: left}
+.f_r {float: right}
 .clear{clear: both}
+.d_none{display: none}
+.d_block{display: block !important;}
 .w_100{width: 100px}
 .w_150{width: 150px}
 .w_200{width: 200px}
@@ -27,7 +36,7 @@ html, body {
 .mb_10{margin-bottom: 10px}
 .fn_bold{font-weight: bold}
 
-.button_sort_holder {margin: 5px 0 20px 0}
+.button_sort_holder {margin: 5px 0 20px 0;}
 .button_sr {
     height: 35px;
     padding: 0 15px;
@@ -41,7 +50,6 @@ html, body {
     line-height: 2.5;
     opacity: 0.7;
     position: relative;
-    margin-top: 15px;
 }
 .button_sr:hover, .but_active {opacity: 1}
 .button_sr:hover::before, .but_active::before {
@@ -57,12 +65,26 @@ html, body {
 .but_empty_k, .but_empty_k.but_active::before, .but_empty_k:hover::before {background: #333}
 .but_accept_k, .but_accept_k.but_active::before, .but_accept_k:hover::before {background: green}
 .but_blocked_k, .but_blocked_k.but_active::before, .but_blocked_k:hover::before {background: red}
+.but_all, .but_all.but_active::before, .but_all:hover::before {background: #006666}
 
 .key_list .key_el:nth-child(2n+1) {background: #f8f8f8}
 .key_el {
     border-bottom: 1px solid #ccc;
     padding: 5px;
+    margin-bottom: 5px;
+    min-width: 590px;
 }
+
+.key_list{
+    position: relative;
+}
+
+.label_holder {
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+}
+
 .key_lb {
     height: 18px;
     width: 100px;
@@ -77,7 +99,7 @@ html, body {
 
 .key_val {
     font-weight: bold;
-    font-size: 14px;
+    font-size: 12px;
 }
 .key_val span{font-weight: normal}
 
@@ -208,4 +230,52 @@ fieldset {
     font-size: 12px;
     background: #FFFFCC;
     border: 1px solid green;
+}
+
+.pop_grey_bg {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.32);
+    display: none;
+    z-index: 1000;
+}
+
+.edit_dialog_pop {
+    width: 300px;
+    height: 150px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    position: absolute;
+    top: 120px; left: 0; right: 0;
+    margin: auto;
+    box-sizing: border-box;
+    background: #fff;
+}
+
+.close_form {
+    position: absolute;
+    top: 10px; right: 10px;
+    width: 10px; height: 10px;
+    background: url("img/close.svg") no-repeat center;
+    cursor: pointer;
+}
+
+.btn_set_status_key {
+    width: 100%;
+    height: 35px;
+    text-align: center;
+    cursor: pointer;
+    line-height: 2.3;
+    background: #009900;
+    color: #fff;
+    border-radius: 3px;
+    font-weight: bold;
+}
+
+.btn_set_status_key.block_btn {
+    background: #990000;
 }
